k8s/k8s-config/ecommerce/environments/backend/ecommerce-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce-backend-deployment
  name: ecommerce-backend-deployment
  namespace: ecommerce
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ecommerce-backend-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-backend-deployment
      namespace: ecommerce
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: ecommerce-backend-database-connection
                optional: false
          image: anphuc2370/ecommerce-backend:v2
          imagePullPolicy: Always
          name: ecommerce-backend
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /run/src/main/resource/application.properties
              name: ecommerce-backend-application-properties-config-volume
              subPath: application.properties
      volumes:
        - configMap:
            defaultMode: 420
            name: ecommerce-backend-application-properties-configmap
          name: ecommerce-backend-application-properties-config-volume
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
spec:
  defaultBackend:
    service:
      name: ecommerce-backend-service
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: api-ecommerce.anphuc.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
spec:
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ecommerce-backend-deployment
  type: ClusterIP
